# project2

./: .gitignore  Dockerfile  README.md  lambda_dockerfile  lambda_function.py  model.onnx  model.onnx.data  model_deploy.py  notebook.ipynb  pyproject.toml
.github/workflows/: deploy.yml
